--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.ts",
-    "start:prod": "tsc && node dist/index.js"
+    "start:dev": "nodemon",
+    "start:prod": "tsc && node dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "@types/nodemon": "^1.19.2",
     "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
