feat: add production mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "sourceMap": true,
-    "baseUrl": "src",
-    "outDir": "dist",
+    "baseUrl": "./src",
+    "outDir": "./dist",
     "strict": true,
     "allowJs": true,
     "noImplicitAny": true,
