--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Simple CRUD API with in-memory database underneath.",
   "type": "module",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start:dev": "nodemon",
-    "start:prod": "tsc && node dist/bundle.js"
+    "start:prod": "npm run build && node ./dist/bundle.cjs",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,13 @@
     "@types/node": "^18.16.19",
     "@types/nodemon": "^1.19.2",
     "@types/uuid": "^9.0.2",
+    "@types/webpack": "^5.28.1",
+    "@types/webpack-dev-server": "^4.7.2",
     "nodemon": "^2.0.22",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
