Feat: add tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
-  "include": ["src"],
+  "include": ["src", "__tests__"],
   "exclude": ["dist", "node_modules"]
 }
