--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "nodemon",
     "start:prod": "npm run build && node ./dist/bundle.cjs",
     "start:multi": "nodemon --multi",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,17 @@
   "license": "ISC",
   "homepage": "https://github.com/YuMentsel/nodejs-crud-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.16.19",
     "@types/nodemon": "^1.19.2",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
